--- a/index.html
+++ b/index.html
@@ -29,5 +29,30 @@
             </div>
         </div>
     </header>
+    <section class="banner">
+        <div class="container">
+            <h1>
+                Startbucks® <br/> Happy Hour
+            </h1>
+            <span>we'll meet you in you inbox, Drink deals are on their way.</span>
+            <div class="banner--imagens">
+                <img src="assets/img/c1.jpg" alt="c1">
+                <img src="assets/img/c2.jpg" alt="c2">
+                <img src="assets/img/c3.jpg" alt="c3">
+            </div>
+        </div>
+    </section>
+    <section class="area1">
+        <div class="area1--content">
+            <div class="bar"></div>
+            <h2>Four Drinks, A Million <br/> Reasons</h2>
+            <div class="area1--quote"><em>'just love yourself and you're set'</em> - Lady Gaga</div>
+            <div class="area1--text">Lady Gaga and Startbucks share a mission to build a kinder, braver world. Through the Born This Way Foundation, Lady Gaga has inspred her fans to embrance kindness in their community--online and in the world. With your help we can empower young people to spread more kindness.</div>
+        
+            <a href="" class="button">learn more</a>
+        </div>
+        <div class="area1--img1"></div>
+        <div class="area1--img2"></div>
+    </section>
 </body>
 </html>
