--- a/index.html
+++ b/index.html
@@ -54,5 +54,38 @@
         <div class="area1--img1"></div>
         <div class="area1--img2"></div>
     </section>
+    <section class="area2">
+        <div class="area2--content">
+            <div class="bar"></div>
+            <h2>Introduction Vanilla Sweet Cream Cold Brew--Sweet Creamy, Cold, Bold.</h2>
+            <div class="area2--text">Just before serving, our slow-steeped custom blend Startbucks® Cold Brew Coffee id topped with a delicate float of house-made vanilla sweet cream that cascades throughout the cup</div>
+        
+            <a href="" class="button">learn more</a>
+        </div>
+        <div class="area2--img1"></div>
+        <div class="area2--img2"></div>
+    </section>
+    <section class="area3">
+        <div class="area3--content">
+            <h2>The New Ultra Caramel <br/> Frappuccino Is Here! </h2>
+            <div class="area3--text">Congrats on doing that thing! This calls for caramel. Lots of it. With cold brew whispped cream. The new Ultra Caramel Frappuccino is here!</div>
+            <a href="" class="button">learn more</a>
+        </div>
+        <div class="area3--img"></div>
+    </section>
+    <section class="area4">
+        <div class="area4--content">
+            <div class="bar"></div>
+            <h2>kindness Starts <br> With a cup </h2>
+            <div class="area4--text">Introducing the Cups of kindness collection: four very special drinks as delicious and refreshing as they are beautiful. Two new creations, Matcha Lemonade and Violet Drink, will join Pink Drink and Ombré Pink Drink as instant summer favorite.</div>
+            <a href="" class="button">learn more</a>
+        </div>
+        <div class="area4--img1"></div>
+    </section>
+    <section class="area5"></section>
+    <footer>
+        Criado com por ItaloCobains <br/> Créditos do layout para Nicepage
+
+    </footer>
 </body>
 </html>
